--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,3 @@
 {
-    "decryption_server": "" // check https://github.com/ParrotDevelopers/123TV_Decryption_Server
+    "decryption_server": "https://new.parrotdevelopers.repl.co" // check https://github.com/ParrotDevelopers/123TV_Decryption_Server
 }
